# GrantSpider

./: .gitignore  .gitmodules  .~lock.report.odp#  README.md
RAG/: .env  README.md  graders.py  pyproject.toml  rag_cmd.py  rag_gradio.py  utils.py
RAG/chunks_grants/multi_doc/: chunks_dense.pkl  chunks_sparse.pkl
preprocessing/: README.md
preprocessing/configs/: layout_detection_layoutlmv3_grant.yaml  layout_detection_layoutlmv3_grant_2.yaml
preprocessing/cropsAll/AMIF-2025-TF2-AG-INTE-04-PATHWAYS_separator_om_en/: extracted_titles.txt
preprocessing/cropsAll/AMIF-2025-TF2-AG-INTE-04-PATHWAYS_separator_om_en/extracted_sections/: 1.0_My_Area_User_account_and_roles.txt  1.1_EU_Login.txt  1.2_Roles_and_access_rights.txt  1.3_Accepting_the_Terms_and_Conditions_of_Use.txt  2.0_Participant_Register_Register_your_organisatio.txt  2.1_Registration_and_validation_of_your_organisati.txt  2.2_LEAR_appointment_and_validation.txt  2.3_Bank_account_registration_and_validation.txt  2.4_Financial_capacity_assessment.txt  2.5_Data_updates.txt  2.6_Complaints_about_validation.txt  3.1.1_Search_funding_opportunities_—_Find_a_call.txt  3.1.2_Projects_that_can_be_funded_Conditions_for_founding.txt  3.1.3_Apply_with_partners_or_as_individual.txt  3.1.4_Submit_a_proposal_Portal_Submission_System.txt  3.1.5_Complaints_about_failed_submission.txt  3.2.1_Admissibility_and_eligibility_check_includes.txt  3.2.2_Evaluation.txt  3.2.3_Special_procedures_Ethics_review_security_sc.txt  3.2.4_Grant_preparation.txt  3.2.5_Grant_signature.txt  3.2.6_Complaints_about_proposal_rejection.txt  3.3.1_Keeping_records_includes_3.3_Grant_managemen.txt  3.3.2_Amendments.txt  3.3.3_Continuous_reporting_on_milestones_deliverab.txt  3.3.4_Reports_payment_requests.txt  3.3.5_Communicating_your_project_Acknowledgement_o.txt  3.3.6_Dissemination_exploitation_of_project_result.txt  3.3.7_Checks_audits_reviews_investigations.txt  (+7 more)
preprocessing/cropsAll/AMIF-2025-TF2-AG-INTE-04-PATHWAYS_separator_rules-lev-lear-fca_en/: extracted_titles.txt
preprocessing/scripts/: content_mapping.py  content_mapping_folders.py  extract_par_text_grant.py  layout_detection_lvlm3.py  pyproject.toml  run_doc_layout_analysis.py
(+283 files in other folders)
